found some issues about spacing and fixd them

--- a/public/style/who-is-us.css
+++ b/public/style/who-is-us.css
@@ -23,7 +23,6 @@
   justify-content: space-between;
   width: 95%;
   margin: auto;
-  padding-top: 3rem;
   margin-bottom: 3rem;
 }
 .introduction-card {
